DOM updates and legal

--- a/index.html
+++ b/index.html
@@ -52,12 +52,18 @@
             <div class="col-xs-12 col-sm-12" id="modal-age-limit" style="margin-bottom: 2.5rem;
             color: #fff;">
               <h3 class="hidden-xs"><strong>Are you of legal drinking age?</strong></h3>
+              <img class="img-fluid" alt="Dimpsey Somerset Gin illustration" src="./images/botanicals/juniper.png" />
             </div>
+            <p>By entering this site, you acknowledge that you have read, understood and consent to our <a href="terms-and-conditions.html" target="_blank">Terms & Conditions</a> and <a href="privacy-and-cookies.html" target="_blank">Privacy & Cookie Policy</a>.</p>
             <div class="col-xs-12 col-lg-12" id="age-submit-area" style="margin-top: 2rem;
             color: #fff;">
               <a href="#" class="btn btn-default" onclick="oldEnough()" id="age-submit">Yes, Enter</a>
               <a href="https://www.drinkaware.co.uk/facts/alcohol-and-the-law/the-law-on-alcohol-and-under-18s" class="btn btn-default">No, Exit</a>
             </div>
+          </div>
+          <div class="row">
+            <p class="small">Still Shed Distillery Limited, Brambles, Wick Lane, BS24 0HG <br/> <br/>
+              Registered in England No. 13305580 <br/> AWRS Unique Reference No. XHAW 000 0011 6738 <br/> VAT Registration No. GB 379 5567 32</p>
           </div>
         </div>
       </div>
@@ -144,9 +150,6 @@
                 </div>
               </div>
 
-              <p>Our gin comes packaged with a lovely little bag of dried petals that can be used to compliment the organic,
-                hand-foraged botanicals that we use. </p>
-
               <p>Best enjoyed as a gin and tonic. Fill a glass with lots of ice, top with a premium tonic and a curl of pink grapefruit
                 or mandarin peel to garnish.</p>
 
@@ -229,7 +232,7 @@
                                     "options": false
                                   },
                                   "text": {
-                                    "button": "Add to Basket"
+                                    "button": "Pre order 30/08"
                                   }
                                 },
                                 "productSet": {
@@ -515,7 +518,7 @@
                                     "options": false
                                   },
                                   "text": {
-                                    "button": "Add to Basket"
+                                    "button": "Pre order 30/08"
                                   },
                                   "variantId": "40636439691426"
                                 },
@@ -820,7 +823,7 @@
       <!-- FOOTER -->
       <footer class="container">
         <p class="float-end"><a href="#">Back to top</a></p>
-        <p>&copy; 2021 Still Shed Distillery Limited &middot; <a href="https://stillshed.co.uk">Still Shed</a> &middot; <a href="#">Privacy</a></p>
+        <p>&copy; 2021 Still Shed Distillery Limited &middot; <a href="https://stillshed.co.uk">Still Shed</a> &middot; <a href="terms-and-conditions.html">Terms & Conditions</a> &middot; <a href="privacy-and-cookies.html">Privacy & Cookie Policy</a> &middot; <a href="delivery-and-returns.html">Delivery & Returns</a></p>
       </footer>
     </main>
 
