Header, footer, logo etc

--- a/delivery-and-returns.html
+++ b/delivery-and-returns.html
@@ -20,20 +20,10 @@
     <header>
       <nav id="main-nav" class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Dimpsey Somerset Gin</a>
+          <a class="navbar-brand" href="index.html">Dimpsey Somerset Gin</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-              <li class="nav-item">
-                <a class="nav-link" href="#theGin">The Gin</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#whereItsMade">Where it's Made</a>
-              </li>
-            </ul>
-          </div>
         </div>
       </nav>
     </header>
@@ -91,7 +81,7 @@
       <!-- FOOTER -->
       <footer class="container">
         <p class="float-end"><a href="#">Back to top</a></p>
-        <p>&copy; 2021 Still Shed Distillery Limited &middot; <a href="https://stillshed.co.uk">Still Shed</a> &middot; <a href="terms-and-conditions.html">Terms & Conditions</a> &middot; <a href="privacy-and-cookies.html">Privacy & Cookie Policy</a> &middot; <a href="delivery-and-returns.html">Delivery & Returns</a></p>
+        <p><a href="https://stillshed.co.uk">&copy; 2021 Still Shed Distillery Limited</a> &middot; <a href="terms-and-conditions.html">Terms & Conditions</a> &middot; <a href="privacy-and-cookies.html">Privacy & Cookie Policy</a> &middot; <a href="delivery-and-returns.html">Delivery & Returns</a></p>
       </footer>
     </main>
 
