--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
                   </div><!-- /.fifty-button -->
 
                   <p>Free UK shipping on orders over £50</p>
-                  <p>Local pick-up from the Still Shed Distillery is available</p>
+                  <p>Local collection from the Still Shed Distillery is available</p>
 
               </div><!-- /.row -->
             </div><!-- /.description -->
@@ -805,7 +805,7 @@
               <p>Our distillery's location is as rural as the taste of our Somerset gin, nested amongst brambles and fields, Dimpsey Somerset Gin is distilled in
                 our copper pot stills, using only the finest, locally foraged botanicals - most of which we grow ourselves!</p>
 
-              <p>If you'd like to know more about us or our distillery, check out the <a href="https://stillshed.co.uk">Still Shed</a> website!</p>
+              <p>If you'd like to know more about us or our distillery, check out the <a href="https://stillshed.co.uk">Still Shed Distillery</a> website!</p>
 
             </div><!-- /.col-lg-6 distillery-description -->
 
@@ -823,7 +823,7 @@
       <!-- FOOTER -->
       <footer class="container">
         <p class="float-end"><a href="#">Back to top</a></p>
-        <p>&copy; 2021 Still Shed Distillery Limited &middot; <a href="https://stillshed.co.uk">Still Shed</a> &middot; <a href="terms-and-conditions.html">Terms & Conditions</a> &middot; <a href="privacy-and-cookies.html">Privacy & Cookie Policy</a> &middot; <a href="delivery-and-returns.html">Delivery & Returns</a></p>
+        <p><a href="https://stillshed.co.uk">&copy; 2021 Still Shed Distillery Limited</a> &middot; <a href="terms-and-conditions.html">Terms & Conditions</a> &middot; <a href="privacy-and-cookies.html">Privacy & Cookie Policy</a> &middot; <a href="delivery-and-returns.html">Delivery & Returns</a></p>
       </footer>
     </main>
 
