--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
     
     <!-- Custom styles for this template -->
+    <link rel="stylesheet" href="./fonts/uppereastside_regular_macroman/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="./fonts/texgyreadventor_regular_macroman/stylesheet.css" type="text/css" charset="utf-8" />
     <link href="dimpsey.css" rel="stylesheet">
   </head>
   <body data-bs-spy="scroll" data-bs-target="#main-nav" data-bs-offset="0" tabindex="0">
@@ -84,6 +86,9 @@
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
               <li class="nav-item">
                 <a class="nav-link" href="#theGin">The Gin</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#howToDrink">How to Drink it</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#whereItsMade">Where it's Made</a>
@@ -137,15 +142,15 @@
             <div class="col-lg-5 description">
               <div class="row">
                 <div class="col-lg-4">
-                  <p><strong>Nose</strong></p>
+                  <h3><strong>Nose</strong></h3>
                   <p>Fragrant juniper, grapefruit & cinnamon</p>
                 </div>
                 <div class="col-lg-4">
-                  <p><strong>Palette</strong></p>
+                  <h3><strong>Palette</strong></h3>
                   <p>Smooth & Full-bodied, balanced with grapefruit and mandarin peel freshness</p>
                 </div>
                 <div class="col-lg-4">
-                  <p><strong>Finish</strong></p>
+                  <h3><strong>Finish</strong></h3>
                   <p>A long extra dry finish, smooth enough to enjoy on the rocks!</p>
                 </div>
               </div>
@@ -735,7 +740,7 @@
           </div><!-- /.row -->
         </div><!-- /.marketing -->
 
-      <div class="container how-to-drink">
+      <div id="howToDrink" class="container how-to-drink">
 
         <hr class="featurette-divider">
 
@@ -793,31 +798,31 @@
         </div><!-- /.row -->
       </div><!-- /.marketing -->
 
-        <div id="whereItsMade" class="container distillery">
-          <hr class="featurette-divider">
-          <div class="row">
+      <div id="whereItsMade" class="container distillery">
+        <hr class="featurette-divider">
+        <div class="row">
 
-            <div class="col-lg-7 distillery-description">
+          <div class="col-lg-7 distillery-description">
 
-              <h2 class="featurette-heading">Check out our distillery. <span class="text-muted">It's where the magic happens.</span></h2>
-              <p class="lead">Dimpsey Somerset Gin is lovingly hand-crafted in our converted barn, the Still Shed Distillery.</p>
+            <h2 class="featurette-heading">Check out our distillery. <span class="text-muted">It's where the magic happens.</span></h2>
+            <p class="lead">Dimpsey Somerset Gin is lovingly hand-crafted in our converted barn, the Still Shed Distillery.</p>
 
-              <p>Our distillery's location is as rural as the taste of our Somerset gin, nested amongst brambles and fields, Dimpsey Somerset Gin is distilled in
-                our copper pot stills, using only the finest, locally foraged botanicals - most of which we grow ourselves!</p>
+            <p>Our distillery's location is as rural as the taste of our Somerset gin, nested amongst brambles and fields, Dimpsey Somerset Gin is distilled in
+              our copper pot stills, using only the finest, locally foraged botanicals - most of which we grow ourselves!</p>
 
-              <p>If you'd like to know more about us or our distillery, check out the <a href="https://stillshed.co.uk">Still Shed Distillery</a> website!</p>
+            <p>If you'd like to know more about us or our distillery, check out the <a href="https://stillshed.co.uk">Still Shed Distillery</a> website!</p>
 
-            </div><!-- /.col-lg-6 distillery-description -->
+          </div><!-- /.col-lg-6 distillery-description -->
 
-            <div class="col-lg-5 distillery-image">
-              <img class="img-fluid" alt="The Still Shed Distillery logo" src="./images/stillshed.png" />
-            </div>
-
+          <div class="col-lg-5 distillery-image">
+            <img class="img-fluid" alt="The Still Shed Distillery logo" src="./images/stillshed.png" />
           </div>
 
-          <hr class="featurette-divider">
+        </div>
 
-        </div><!-- /.distillery -->
+        <hr class="featurette-divider">
+
+      </div><!-- /.distillery -->
 
 
       <!-- FOOTER -->
