--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -13,6 +13,8 @@
 
     
     <!-- Custom styles for this template -->
+    <link rel="stylesheet" href="./fonts/uppereastside_regular_macroman/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="./fonts/texgyreadventor_regular_macroman/stylesheet.css" type="text/css" charset="utf-8" />
     <link href="dimpsey.css" rel="stylesheet">
   </head>
   <body data-bs-spy="scroll" data-bs-target="#main-nav" data-bs-offset="0" tabindex="0">
