--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="author" content="Tommy">
     <title>Dimpsey Somerset Gin</title>
     <link rel="canonical" href="https://dimpseygin.co.uk" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
 
     <script type="application/ld+json">
       {
