--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
                   </div><!-- /.fifty-button -->
 
                   <p>Free UK shipping on orders over £50</p>
-                  <p>Local collection from the Still Shed Distillery is available</p>
+                  <p>Local collection from Still Shed Distillery is available</p>
 
               </div><!-- /.row -->
             </div><!-- /.description -->
