--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
     
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="./fonts/uppereastside_regular_macroman/stylesheet.css" type="text/css" charset="utf-8" />
-    <link rel="stylesheet" href="./fonts/texgyreadventor_regular_macroman/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="./fonts/uppereastside_regular_macroman/stylesheet.css" type="text/css" />
+    <link rel="stylesheet" href="./fonts/texgyreadventor_regular_macroman/stylesheet.css" type="text/css" />
     <link href="dimpsey.css" rel="stylesheet">
   </head>
   <body data-bs-spy="scroll" data-bs-target="#main-nav" data-bs-offset="0" tabindex="0">
@@ -806,7 +806,7 @@
 
           <div class="col-lg-7 distillery-description">
 
-            <h2 class="featurette-heading">Check out our distillery. <span class="text-muted">It's where the magic happens.</span></h2>
+            <h2 class="featurette-heading">Check out our distillery</h2>
             <p class="lead">Dimpsey Somerset Gin is lovingly hand-crafted in our converted barn, the Still Shed Distillery.</p>
 
             <p>Our distillery's location is as rural as the taste of our Somerset gin, nested amongst brambles and fields, Dimpsey Somerset Gin is distilled in
