Small updates to DOM and content

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <header>
       <nav id="main-nav" class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Dimpsey Somerset Gin</a>
+          <a class="navbar-brand" href="#"><span class="dimpsey">Dimpsey</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -116,7 +116,7 @@
 
       <div class="animated-illustration">
         <img class="img-fluid d-none d-md-block" alt="Dimpsey Somerset Gin illustration" src="./images/main.png" />
-        <img class="img-fluid d-block d-sm-none"  alt="Dimpsey Somerset Gin illustration" src="./images/main-mobile.png" />
+        <img class="img-fluid d-block d-sm-none main-mobile"  alt="Dimpsey Somerset Gin illustration" src="./images/main-mobile.png" />
       </div>
 
       <hr class="featurette-divider">
@@ -124,7 +124,7 @@
         <div id="theGin" class="container quote">
           <blockquote class="blockquote text-center">
             <p>Using traditional copper pot stills, just before Dimpsey (that’s old Somerset for sunset), at the foot of the Mendip Hills, <br />
-              using locally foraged botanicals and Cheddar spring water, this is <br />  Dimpsey Somerset Gin.</p>
+              using locally sourced botanicals and Cheddar spring water, this is <br />  Dimpsey Somerset Gin.</p>
           </blockquote>
         </div>
 
@@ -148,12 +148,12 @@
               </label>
             </div><!-- /.col-lg-1 thumbnails -->
 
-            <div class="col-lg-6 main-image">
+            <div class="col-lg-5 main-image">
               <img class="seven-hundred-ml-image" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/bottle.png" />
               <img class="fifty-ml-image d-none" alt="5cl bottle of Dimpsey Somerset Gin" src="./images/five.png" />
             </div><!-- /.col-lg-6 main-image -->
 
-            <div class="col-lg-5 description">
+            <div class="col-lg-6 description">
               <div class="row">
                 <div class="col-lg-4">
                   <h3><strong>Nose</strong></h3>
@@ -171,6 +171,8 @@
 
               <p>Best enjoyed as a gin and tonic. Fill a glass with lots of ice, top with a premium tonic and a curl of pink grapefruit
                 or mandarin peel to garnish.</p>
+
+              <p>Our first batch is exclusive of 176 bottles, each of which is numbered by hand.</p>
 
               <div class="row shopify-buy-buttons">
 
@@ -762,31 +764,20 @@
 
           <div class="col-lg-6 drink-one">
 
-            <h2 class="featurette-heading">Cucumber Cooler</h2>
+            <h2 class="featurette-heading">Dimpsey Martini</h2>
             <p class="lead">Ingredients</p>
-              <div class="row">
-                <div class="col-lg-6">
-                  <ul>
-                    <li>60ml Dimpsey Somerset Gin</li>
-                    <li>22.5ml fresh lime juice</li>
-                    <li>15ml sugar syrup</li>
-                  </ul>
-                </div>
-                <div class="col-lg-6">
-                  <ul>
-                    <li>15ml soda water</li>
-                    <li>2 slices of peeled cucumber</li>
-                    <li>8 mint leaves</li>
-                  </ul>
-                </div>
-              </div>
-
-            <p>Instructions</p>
             <ul>
-              <li>Muddle cucumber in the base of a shaker</li>
-              <li>Add gin, lime juice, sugar syrup and mint</li>
-              <li>Shake with ice and fine strain into chilled glass</li>
-              <li>Top with splash of soda</li>
+              <li>60ml Dimpsey Somerset Gin</li>
+              <li>15ml dry vermouth</li>
+              <li>2 dashes of Grapefruit bitters</li>
+              <li>Fresh lemon zest</li>
+            </ul>
+
+            <p class="lead">Instructions</p>
+            <ul>
+              <li>Add gin and vermouth to a mixing glassed filled with ice</li>
+              <li>Stir well and strain into a martini glass</li>
+              <li>Add the Grapefuit bitters and finish with lemon zest</li>
             </ul>
 
           </div><!-- /.col-lg-6 main-image -->
@@ -801,7 +792,7 @@
               <li>Sliced grapefruit</li>
             </ul>
 
-            <p>Instructions</p>
+            <p class="lead">Instructions</p>
             <ul>
               <li>Combine gin and grapefruit juice in a cocktail shaker filled with ice</li>
               <li>Stir well and strain into a chilled martini glass</li>
@@ -818,11 +809,11 @@
 
           <div class="col-lg-7 distillery-description">
 
-            <h2 class="featurette-heading">Check out our distillery</h2>
+            <h2 class="featurette-heading">Where it's made</h2>
             <p class="lead">Dimpsey Somerset Gin is lovingly hand-crafted in our converted barn, the Still Shed Distillery.</p>
 
-            <p>Our distillery's location is as rural as the taste of our Somerset gin, nested amongst brambles and fields, Dimpsey Somerset Gin is distilled in
-              our copper pot stills, using only the finest, locally foraged botanicals - most of which we grow ourselves!</p>
+            <p>Our distillery's location is as rural as the taste of our Somerset Gin, nested amongst brambles and fields, Dimpsey Somerset Gin is distilled in
+              our copper pot stills, using only the finest, locally sourced botanicals - most of which we grow ourselves!</p>
 
             <p>If you'd like to know more about us or our distillery, check out the <a href="https://stillshed.co.uk">Still Shed Distillery</a> website!</p>
 
