--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <meta name="author" content="Tommy">
     <title>Dimpsey Somerset Gin</title>
     <link rel="canonical" href="https://dimpseygin.co.uk" />
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 
     <script type="application/ld+json">
       {
@@ -775,7 +781,7 @@
 
             <p class="lead">Instructions</p>
             <ul>
-              <li>Add gin and vermouth to a mixing glassed filled with ice</li>
+              <li>Add gin and vermouth to a mixing glass filled with ice</li>
               <li>Stir well and strain into a martini glass</li>
               <li>Add the Grapefuit bitters and finish with lemon zest</li>
             </ul>
