--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <meta name="format-detection" content="telephone=no">
 
     <script type="application/ld+json">
       {
@@ -178,7 +179,7 @@
               <p>Best enjoyed as a gin and tonic. Fill a glass with lots of ice, top with a premium tonic and a curl of pink grapefruit
                 or mandarin peel to garnish.</p>
 
-              <p>Our first batch is exclusive of 176 bottles, each of which is numbered by hand.</p>
+              <p>Our first batch is exclusive of 150 bottles, each of which numbered by hand.</p>
 
               <div class="row shopify-buy-buttons">
 
@@ -818,7 +819,7 @@
             <h2 class="featurette-heading">Where it's made</h2>
             <p class="lead">Dimpsey Somerset Gin is lovingly hand-crafted in our converted barn, the Still Shed Distillery.</p>
 
-            <p>Our distillery's location is as rural as the taste of our Somerset Gin, nested amongst brambles and fields, Dimpsey Somerset Gin is distilled in
+            <p>Our distillery's location is as rural as the taste of our Somerset Gin, nestled amongst brambles and fields, Dimpsey Somerset Gin is distilled in
               our copper pot stills, using only the finest, locally sourced botanicals - most of which we grow ourselves!</p>
 
             <p>If you'd like to know more about us or our distillery, check out the <a href="https://stillshed.co.uk">Still Shed Distillery</a> website!</p>
